# OpenCL-in-Action.BAK

./: .clang-format  CMakeLists.txt
Ch01/matvec/: CMakeLists.txt  README.md  aux.c  aux.h  matvec.c  matvec.cl
Ch02/contextCount/: CMakeLists.txt  aux.c  aux.h  contextCount.c
Ch02/context_count/: context_count  context_count.c
Ch02/deviceExtTest/: device_ext_test  device_ext_test.c
Ch02/kernelSearch/: CMakeLists.txt  aux.c  aux.h  kernelSearch.c
Ch02/kernel_search/: kernel_search  kernel_search.c  test.cl
Ch02/platformExtTest/: CMakeLists.txt  README.md  aux.c  aux.h  debug.c  debug.h  device.c  device.h  deviceCL.c  deviceCL.h  error.c  error.h  lscl.c  platform.h  platformCL.c  platformExtTest.c  version.h
Ch02/platform_ext_test/: platform_ext_test  platform_ext_test.c
Ch02/program_build/: good.cl  program_build  program_build.c
Ch02/queue_kernel/: blank.cl  queue_kernel  queue_kernel.c
Ch03/buffer_check/: buffer_check  buffer_check.c
Ch03/buffer_test/: blank.cl  buffer_test  buffer_test.c
Ch03/map_copy/: map_copy  map_copy.c
Ch04/double_test/: double_test  double_test.c  double_test.cl
Ch04/float_config/: float_config  float_config.c
Ch04/hello_kernel/: hello_kernel  hello_kernel.c  hello_kernel.cl
Ch04/vector_bytes/: vector_bytes  vector_bytes.c  vector_bytes.cl
Ch04/vector_widths/: vector_widths  vector_widths.c
